Twiddling inspiration block css

--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -23,10 +23,16 @@
 
     &__bgimg {
         flex-grow: 1;
+        display: flex;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: 50% 50%;
         margin: 11px 11px 10px 10px;
+        text-align: center;
+        flex-direction: column;
+        justify-content: center;
+        align-content: stretch;
+        align-items: center;
 
         @media screen and (max-width: 640px) {
             margin: 2px;
@@ -34,10 +40,11 @@
     }
 
     &__link {
-        background-color: rgba(0,0,0, 0.65);
+        background-color: rgba(0,0,0, 0.45);
         color: white;
-        padding: $standard-spacing;
+        padding: $standard-spacing / 2;
         border-radius: 4px;
+        min-width: 70%;
     }
 
     &__title {
