--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -19,9 +19,10 @@
     &__row,
     &__row--read {
         padding: $standard-spacing / 3;
-        margin-bottom: 0;
+        margin: 0;
         list-style: none;
         border-bottom: solid thin $color-box-border;
+        display: flex;
 
         &:last-of-type {
             border-bottom: 0;
@@ -30,6 +31,16 @@
 
     &__row--read {
         background-color: $color-subtle-gray-background;
+    }
+
+    &__avatar {
+        width: 56px;
+        text-align: center;
+        flex-shrink: 0;
+    }
+
+    &__body {
+        padding-left: $standard-spacing;
     }
 
     &__para {
