Make search / result page slightly more sane

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -63,7 +63,7 @@
                         <%= label_tag(:q, "Term:") %>
                     </div>
                     <div class="ten columns">
-                        <%= text_field_tag(:q) %>
+                        <%= text_field_tag(:q, @term ) %>
                     </div>
                 </div>
 
