Added more meta tags for colors and home screen integrations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-
+    <meta name="application-name" content="Plendit">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="msapplication-TileColor" content="#2a96ff">
+    <meta name="theme-color" content="#2a96ff">
     <%
         meta og: {
             site_name: "Plendit",
