--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -20,8 +20,8 @@
     <div class="row">
         <div class="eight columns">
             <%= render partial: "ad_title_box", locals: { ad: @ad } %>
-            <%- if  user_signed_in? && (current_user == @ad.user || current_user.status == 'admin') -%>
-              <%= render partial: "ad_status_box", locals: { ad: @ad } %>
+            <%- if  user_signed_in? && (current_user == @ad.user || current_user.is_admin_hack?) -%>
+                <%= render partial: "ad_status_box", locals: { ad: @ad } %>
             <%- end -%>
             <%= render partial: "ad_copy_section", locals: { ad: @ad } %>
             <%= render partial: "ad_gallery_mosaic", locals: { ad: @ad } %>
