Footer li spacing fix

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -2,27 +2,26 @@
     <div class="container">
         <div class="row">
             <div class="four columns">
-                <h6>Generelt</h6>
+                <h6 class="about-footer__title">Generelt</h6>
                 <ul class="about-footer__list">
-                    <li>link 1</li>
-                    <li>link 1</li>
-                    <li>link 1</li>
-                    <li>link 1</li>
-                </ul>
-
-            </div>
-            <div class="four columns">
-                <h6>Kundeservice</h6>
-                <ul class="about-footer__list">
-                    <li>Ofte stilte spørsmål</li>
-                    <li>Kontaktinformasjon</li>
-                    <li>Om oss</li>
+                    <li class="about-footer__list-item">link 1</li>
+                    <li class="about-footer__list-item">link 1</li>
+                    <li class="about-footer__list-item">link 1</li>
+                    <li class="about-footer__list-item">link 1</li>
                 </ul>
             </div>
             <div class="four columns">
-                <h6>Besøk oss på facebook</h6>
+                <h6 class="about-footer__title">Kundeservice</h6>
                 <ul class="about-footer__list">
-                    <li><%= image_tag "facebook/FB-LikeButton-online-72.png", alt: "", size: "72x30" %></li>
+                    <li class="about-footer__list-item">Ofte stilte spørsmål</li>
+                    <li class="about-footer__list-item">Kontaktinformasjon</li>
+                    <li class="about-footer__list-item">Om oss</li>
+                </ul>
+            </div>
+            <div class="four columns">
+                <h6 class="about-footer__title">Besøk oss på facebook</h6>
+                <ul class="about-footer__list">
+                    <li class="about-footer__list-item"><%= image_tag "facebook/FB-LikeButton-online-72.png", alt: "", size: "72x30" %></li>
                 </ul>
             </div>
         </div>
