Added status bar for ads

--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -1,4 +1,4 @@
-<div style="border: solid thin black">
+<div style="border: solid thin black" id="ad-controls">
     Ad.status: <%= ad.status %>
 
     <% if current_user == ad.user || current_user.is_admin_hack? %>
