Restored missing term var

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -22,7 +22,7 @@
                         <%= number_field_tag( :price_min, nil, min: 0, class: "search-filter-section__range-input") %>
                     </div>
                     <div class="one columns">
-                        <%= label_tag(:price_max, "opp til:") %>
+                        <%= label_tag(:price_max, "Opp til:") %>
                     </div>
                     <div class="two columns">
                         <%= number_field_tag( :price_max, nil, min: 0, class: "search-filter-section__range-input") %>
