--- a/app/views/shared/_image_manager.html.erb
+++ b/app/views/shared/_image_manager.html.erb
@@ -1,18 +1,3 @@
 <div class="image-manager">
-    <% ad.ad_images.each do |img| %>
-        <div class="image-manager__item">
-            <div class="image-manager__thumb-box">
-                <%= image_tag img.image.url(:thumb), size: "180x120", class: "image-manager__thumb" %>
-            </div>
-            <div class="image-manager__controls">
-                <%= form_for(img, url: ad_image_path(img)) do |f| %>
-                    <%= f.text_field :description, placeholder: 'Bildetekst' %>
-                    <%= f.hidden_field :previous_url, value: request.fullpath %>
-                    <%= f.submit 'Lagre bildetekst' %>
-                <% end %>
-                <%= button_to 'Slett', ad_image_path(img), method: :delete, form_class: "lolclass", class: "lolclass2" %>
-                <%= button_to 'Gjør til hovedbilde', make_primary_ad_image_path(img), form_class: "lolclass", class: "lolclass2" %>
-            </div>
-        </div>
-    <% end %>
+    <%= render partial: "shared/image_manager_item", collection: ad.ad_images, as: :ad_image %>
 </div>
