--- a/app/views/shared/_image_manager_item.html.erb
+++ b/app/views/shared/_image_manager_item.html.erb
@@ -8,7 +8,7 @@
             <%= f.hidden_field :previous_url, value: request.fullpath %>
             <%= f.submit 'Lagre bildetekst' %>
         <% end %>
-        <%= button_to 'Slett', ad_image_path(ad_image), method: :delete, form_class: "lolclass", class: "lolclass2" %>
-        <%= button_to 'Gjør til hovedbilde', make_primary_ad_image_path(ad_image), form_class: "lolclass", class: "lolclass2" %>
+        <%= button_to 'Slett', ad_image_path(ad_image), method: :delete, params: {previous_url: request.fullpath} %>
+        <%= button_to 'Gjør til hovedbilde', make_primary_ad_image_path(ad_image) %>
     </div>
 </div>
