Throbber while uploading images

--- a/app/views/shared/_image_uploader.html.erb
+++ b/app/views/shared/_image_uploader.html.erb
@@ -2,6 +2,7 @@
     <script type="text/template" data-dropzone-template>
         <div class="image-uploader__thumb-holder">
             <img class="image-uploader__thumb" data-dz-thumbnail>
+            <%= image_tag "throbber.svg", size: "80x80", alt: "", class: "image-uploader__throbber" %>
         </div>
     </script>
 
