--- a/app/assets/stylesheets/_image_uploader.scss
+++ b/app/assets/stylesheets/_image_uploader.scss
@@ -14,9 +14,17 @@
 
     &__thumb-holder {
         display: inline-block;
+        width: 80px;
+        height: 80px;
+        margin: $standard-spacing / 2;
     }
 
     &__thumb {
-        display: inline-block;
+        position: absolute;
+    }
+
+    &__throbber {
+        background-color: rgba(0,0,0,0.35);
+        position: absolute;
     }
 }
