--- a/app/views/ad_images/index.html.erb
+++ b/app/views/ad_images/index.html.erb
@@ -4,6 +4,10 @@
         <div class="seven columns">
             <%= render partial: 'shared/image_uploader', locals: { ad: @ad } %>
             <%= render partial: 'shared/image_manager', locals: { ad: @ad } %>
+            <div>
+                <%= link_to "rediger annonse", (edit_users_ad_path @ad_id) %>
+                <%= link_to "vis annonse", (ad_path @ad_id) %>
+            </div>
         </div>
         <div class="four columns offset-by-one column">
             <%= render partial: "ads/ad_input_copy" %>
