Preliminary support for clickable POIs

--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -1,4 +1,4 @@
-<div class="search-result-item">
+<div class="search-result-item" data-adid="<%= ad.id %>">
     <%= link_to ad_path(ad.id), class: "search-result-item__link" do %>
         <div class="search-result-item__image-holder">
             <%= image_tag Ad.find(ad.id).image_url_with_fallback(:searchresult), alt: "", class: "search-result-item__image" %>
