Ad categories now live in the DB

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -13,6 +13,8 @@
 
     <h1 class="u-push-down">Legg ut tingene dine</h1>
 
+    <h5>this Ad has the following category: <b><%= @ad.category %></b></h5>
+
     <label>Overskrift:</label>
     <%= f.text_field :title, class: 'u-full-width' %>
 
